fixed click event bug on mobile for .metric-active

--- a/static/css/expresso.css
+++ b/static/css/expresso.css
@@ -21,12 +21,16 @@ p, td {
     content: '';
 }
 
+.navbar-toggle {
+    cursor: pointer;
+}
+
 .metric-active {
     color: #1e0fbe;
+    cursor: pointer;
 }
 
 .metric-active:hover {
-    cursor: pointer;
     text-decoration: underline;
 }
 
